--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "howler": "^2.0.15",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-parallax": "^2.0.1",
